--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.21.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-external-link": "^1.2.1",
     "react-hook-form": "^6.15.5",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
